<resources>
    <string name="app_name">함께가효</string>
    <string name="login_title">함께가효</string>
    <string name="login_subtitle">부모님과 함께하는 특별한 여행</string>
    <string name="login_id_title">아이디</string>
    <string name="login_id">아이디를 입력하세요</string>
    <string name="login_pw_title">비밀번호</string>
    <string name="login_pw">비밀번호를 입력하세요</string>
    <string name="login_no_data">가입되지 않은 회원입니다</string>
    <string name="login_button">로그인</string>
    <string name="login_to_join">계정이 없으신가요? 회원가입</string>
    <string name="login_to_find">계정을 잊으셨나요? 아이디, 비밀번호 찾기</string>
    <string name="signup_title">회원가입</string>
    <string name="signup_agree_subtitle">서비스 이용을 위한 약관에 동의해주세요</string>
    <string name="signup_agree_all">전체 동의하기</string>
    <string name="signup_agree_service">[필수] 서비스 이용약관</string>
    <string name="signup_agree_personal">[필수] 개인정보 처리방침</string>
    <string name="signup_agree_marketing">[선택] 마케팅 정보 수신 동의</string>
    <string name="signup_agree_button">다음 단계로</string>
    <string name="signup_to_login">이미 계정이 있으신가요? 로그인</string>
    <string name="signup_info_subtitle">서비스 이용을 위한 정보를 입력해주세요</string>
    <string name="signup_info_id_title">아이디</string>
    <string name="signup_info_id">영문, 숫자 포함 6 ~ 12자리</string>
    <string name="signup_info_id_detail">중복 확인</string>
    <string name="signup_info_id_available">사용 가능 한 아이디입니다</string>
    <string name="signup_info_id_not_available">이미 사용중인 아이디입니다</string>
    <string name="signup_info_id_rule">아이디는 6~12자의 영문,숫자만 사용가능합니다</string>
    <string name="signup_info_pw_title">비밀번호</string>
    <string name="signup_info_pw">영문 대소문자, 숫자, 특수문자 포함 8자리 이상</string>
    <string name="signup_info_pw_rule">비밀번호는 8자 이상의 영문,숫자,특수문자만 사용가능합니다</string>
    <string name="signup_pw_rule_title">비밀번호 요구사항</string>
    <string name="signup_pw_rule1">8자 이상</string>
    <string name="signup_pw_rule2">영문 대문자 포함</string>
    <string name="signup_pw_rule3">영문 소문자 포함</string>
    <string name="signup_pw_rule4">숫자 포함</string>
    <string name="signup_pw_rule5">특수문자 포함</string>
    <string name="signup_info_pw_check_title">비밀번호 확인</string>
    <string name="signup_info_pw_check">비밀번호를 다시 입력하세요</string>
    <string name="signup_info_pw_match">비밀번호가 일치합니다</string>
    <string name="signup_info_pw_not_match">비밀번호가 일치하지 않습니다</string>
    <string name="signup_info_email_title">이메일</string>
    <string name="signup_info_email">hamkkae@example.com</string>
    <string name="signup_info_email_detail">인증 요청</string>
    <string name="signup_info_email_sending">발송중</string>
    <string name="signup_info_email_resend">재인증</string>
    <string name="signup_info_email_rule">올바른 이메일 형식이 아닙니다</string>
    <string name="signup_info_email_exist">이미 가입된 이메일입니다</string>
    <string name="signup_info_email_send">인증번호를 발송했습니다</string>
    <string name="signup_info_email_finished">인증 시간이 만료되었습니다.</string>
    <string name="signup_info_code_title">인증번호</string>
    <string name="signup_info_code">인증번호를 입력하세요</string>
    <string name="signup_info_code_match">인증번호가 일치합니다</string>
    <string name="signup_info_code_no_match">인증번호가 일치하지 않습니다</string>
    <string name="signup_info_code_detail">확인</string>
    <string name="signup_info_button">회원가입</string>
    <string name="find_title">계정 찾기</string>
    <string name="find_subtitle">계정을 찾기 위한 정보를 입력해주세요</string>
    <string name="find_id_button">아이디 찾기</string>
    <string name="find_id_send">인증번호 발송</string>
    <string name="find_id_code">인증번호</string>
    <string name="find_id_input_code">6자리 인증번호를 입력하세요</string>
    <string name="find_id_verify">인증 확인</string>
    <string name="find_id_resend">다시 발송</string>
    <string name="find_id_show">아이디를 찾았습니다</string>
    <string name="find_id_can_login">위 아이디로 로그인하실 수 있습니다.</string>
    <string name="find_id_go_login">로그인하러 가기</string>
    <string name="find_pw_button">비밀번호 찾기</string>
    <string name="find_to_login">계정이 기억나셨나요? 로그인</string>
    <string name="find_id_name_title">이름</string>
    <string name="find_id_name">이름을 입력해주세요</string>
    <string name="find_id_email_title">이메일</string>
    <string name="find_id_email">이메일을 입력해주세요</string>
    <string name="find_pw_id_title">아이디</string>
    <string name="find_pw_id">아이디를 입력해주세요</string>
    <string name="find_pw_email_title">이메일</string>
    <string name="find_pw_email">이메일을 입력해주세요</string>
    <string name="find_pw_temp_pw_send">임시 비밀번호 발송 완료</string>
    <string name="find_pw_send_to">%s로 \n임시 비밀번호를 발송했습니다.</string>
    <string name="state_complete">완료</string>
    <string name="state_in_progress">진행중</string>
    <string name="state_before_starting">시작전</string>
    <string name="keyword_temple">사찰</string>
    <string name="keyword_history">역사</string>
    <string name="keyword_culture">문화</string>
    <string name="main_title">함께가효</string>
    <string name="main_subtitle">부모님과 함께하는 특별한 여행</string>
    <string name="main_question_title">가족 대화 질문이 도착했어요!</string>
    <string name="main_question_answer">답변하기</string>
    <string name="main_question_later">나중에</string>
    <string name="main_trip_preparing">여행 준비 중</string>
    <string name="main_trip_expected_day1">예정된 Day 1 일정</string>
    <string name="main_trip_current_location">현재위치: %s</string>
    <string name="main_trip_next_location">다음위치: %s</string>
    <string name="main_trip_all_done">오늘 일정: 모두 완료 ✅</string>
    <string name="main_trip_current_day">• Day %d</string>
    <string name="main_trip_photo">사진</string>
    <string name="main_trip_answers">대화</string>
    <string name="main_trip_complete">완료</string>
    <string name="main_trip_complete_count">%d/%d</string>
    <string name="main_trip_progress">여행 진행률</string>
    <string name="main_trip_detail">여행 계속하기</string>
    <string name="main_trip_upload">사진 업로드</string>
    <string name="main_today_schedule">오늘의 일정</string>
    <string name="main_tomorrow_schedule">내일의 일정</string>
    <string name="main_time">%s ~ %s</string>
    <string name="main_current">현재</string>
    <string name="main_plan_title">부모님과 특별한 여행을 계획해보세요</string>
    <string name="main_plan_subtitle">취향에 맞는 관광지 추천부터 추억만들기까지 \n모든 것을 도와드려요 😊</string>
    <string name="main_plan_first_btn">+\t\t여행 계획하기</string>
    <string name="main_plan_btn">+\t\t\t여행 계획하기</string>
    <string name="main_recent_title">최근 활동</string>
    <string name="main_recent_all">전체보기</string>
    <string name="main_recent_no_content">아직 활동 내역이 없어요!</string>
    <string name="main_recent_just">방금 전</string>
    <string name="main_recent_minute">%d분 전</string>
    <string name="main_recent_hour">%d시간 전</string>
    <string name="main_album_title">추억 사진첩</string>
    <string name="main_album_subtitle">여행 추억 모아보기</string>
    <string name="main_tip_title">여행 가이드</string>
    <string name="main_tip_subtitle">앱 사용법과 여행 팁</string>
    <string name="main_trip_record_title">여행 기록</string>
    <string name="main_trip_record_no_content">아직 여행 기록이 없어요!</string>
    <string name="main_trip_record_during">%s ~ %s</string>
    <string name="plan_title">여행 계획</string>
    <string name="plan_subtitle">부모님께 딱 맞는 여행을 계획해보세요</string>
    <string name="plan_go_next">다음 단계로</string>
    <string name="select_trip_info_title">새 여행 계획</string>
    <string name="select_trip_info_subtitle">여행 일정에 맞는 코스를 추천해드려요</string>
    <string name="select_trip_info_progress_title">1단계: 일정 선택</string>
    <string name="select_trip_info_progress">1/4</string>
    <string name="select_trip_info_date_title">여행날짜</string>
    <string name="select_trip_info_date_subtitle">출발일과 도착일을 선택해 주세요</string>
    <string name="select_trip_info_date_start">여행 시작일</string>
    <string name="select_trip_info_date_end">여행 종료일</string>
    <string name="select_trip_info_person_title">인원</string>
    <string name="select_trip_info_person_count">0명</string>
    <string name="select_trip_info_budget_title">하루 예산 범위</string>
    <string name="select_trip_info_budget_low">💰\u00A0\u00A0경제적인\n1인당 10만원 이하</string>
    <string name="select_trip_info_budget_mid">💳\u00A0\u00A0적당하게\n1인당 10~20만원</string>
    <string name="select_trip_info_budget_high">💎\u00A0\u00A0여유롭게\n1인당 20만원 이상</string>
    <string name="select_trip_done">다음 단계로</string>
    <string name="select_trip_info_done_message">모든 여행 정보가 입력되었어요!</string>
    <string name="select_trip_style_subtitle">부모님 취향에 맞는 코스를 추천해드려요</string>
    <string name="select_trip_style_progress_title">2단계: 취향 선택</string>
    <string name="select_trip_style_progress">2/4</string>
    <string name="select_trip_style_guide_title">부모님이 선호하는 여행 스타일을 선택해주세요</string>
    <string name="select_trip_style_guide_content">여러 개를 선택할 수 있어요\n취향에 맞는 관광지 코스를 추천해드릴게요</string>
    <string name="trip_style_theme">테마</string>
    <string name="selected_trip_style">선택된 취향</string>
    <string name="select_trip_style_done_message">여행 스타일이 선택되었어요!</string>
    <string name="loading">부모님 취향에 맞는 코스를 찾고 있어요%s</string>
    <string name="loading_max_time">최대 2분정도 소요될 수 있습니다</string>
    <string name="loading_error">오류가 발생했습니다.\n나중에 다시 시도해주십시오.</string>
    <string name="recommend_course_progress_title">3단계: 코스 선택</string>
    <string name="recommend_course_progress">3/4</string>
    <string name="recommend_course_go_map">지도 보기</string>
    <string name="recommend_course_detail">상세보기</string>
    <string name="recommend_course_done">이 코스로 여행 시작하기</string>
    <string name="recommend_course_more">다른 코스 더 보기</string>
    <string name="bar_overview">코스 개요</string>
    <string name="bar_detail">코스 상세</string>
    <string name="bar_restaurant">맛집 정보</string>
    <string name="bar_accommodation">숙소 정보</string>
    <string name="overview_highlights">코스 하이라이트</string>
    <string name="tip_title">부모님과 함께하는 여행 팁</string>
    <string name="detail_btn_start">이 코스로 여행 시작하기</string>
    <string name="overview_preview">일정 미리보기</string>
    <string name="overview_first_day">첫째 날</string>
    <string name="info_signature">대표 메뉴</string>
    <string name="info_amenities">편의시설</string>
    <string name="info_call">전화하기</string>
    <string name="info_map">지도보기</string>
    <string name="info_checkin">체크인</string>
    <string name="info_checkout">체크아웃</string>
    <string name="tip_caution">동행 시 주의사항</string>
    <string name="tip_best_visit">최적 방문 시기</string>
    <string name="tip_checklist">준비물 체크리스트</string>
    <string name="tip_bullet">• </string>
    <string name="trip_complete_progress_title">4단계: 여행 시작</string>
    <string name="trip_complete_progress">4/4</string>
    <string name="trip_summation_complete">모든 계획이 완료되었습니다!</string>
    <string name="trip_summation_during">기간</string>
    <string name="trip_summation_personnel">인원</string>
    <string name="trip_preview_title">첫날 일정 미리보기</string>
    <string name="trip_complete_tip_title">준비 완료!</string>
    <string name="trip_complete_tip_subtitle">부모님과 함께하는 특별한 여행이 시작됩니다.</string>
    <string name="trip_complete_tip">각 관광지에서 사진을 업로드하면 자동으로 다음 일정으로 진행돼요</string>
    <string name="trip_complete_trip_start">여행 시작하기</string>
    <string name="trip_complete_enjoy">즐거운 여행 되세요!</string>
    <string name="trip_detail_map">지도</string>
    <string name="setting_resignation_title">회원탈퇴</string>
    <string name="setting_resignation_guide">회원탈퇴 안내</string>
    <string name="setting_resignation_delete_info">탈퇴 시 삭제되는 정보</string>
    <string name="setting_resignation_info">• 계정 정보(아이디, 비밀번호, 이메일) \n• 여행 기록 및 사진 \n• 앨범 및 추억 데이터</string>
    <string name="setting_resignation_reason">탈퇴 사유를 알려주세요</string>
    <string name="setting_resignation_reason_sub">서비스 개선을 위해 탈퇴 사유를 선택해주세요</string>
    <string name="setting_resignation_reason1">앱을 더 이상 사용하지 않아요</string>
    <string name="setting_resignation_reason2">다른 여행 앱을 사용하게 되었어요</string>
    <string name="setting_resignation_reason3">앱 기능이 불편해요</string>
    <string name="setting_resignation_reason4">앱이 자주 오류가 발생해요</string>
    <string name="setting_resignation_reason5">계정을 새로 만들고 싶어요</string>
    <string name="setting_resignation_reason6">기타</string>
    <string name="setting_resignation_etc">탈퇴 사유를 구체적으로 작성해주세요...</string>
</resources>