<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="2dp"
        android:text="@string/login_id_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/mcv_id"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="6dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_id_title"
        app:strokeColor="@color/auth_box_gray"
        app:strokeWidth="1dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/white"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/login_id"
                android:inputType="text"
                android:paddingVertical="15dp"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_pw_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="2dp"
        android:text="@string/login_pw_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/mcv_pw"
        app:layout_constraintTop_toBottomOf="@id/mcv_id" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="6dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pw_title"
        app:strokeColor="@color/auth_box_gray"
        app:strokeWidth="1dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/white"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/login_pw"
                android:inputType="textPassword"
                android:paddingVertical="15dp"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/btn_primary_pressed"
        android:paddingVertical="15dp"
        android:text="@string/login_button"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/mcv_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_to_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_join"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_to_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_find"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_to_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>