<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_yellow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_back_black_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.08" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/setting_resignation_title"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <View
                android:id="@+id/v_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/header_line_orange"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardElevation="2dp"
            app:strokeColor="@color/complete_preview_bg_gray"
            app:strokeWidth="1dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/cl_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_guide_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="18dp"
                    android:text="@string/setting_resignation_guide"
                    android:textSize="16sp"
                    android:textColor="@color/hover_red"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_remove_info_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/setting_resignation_delete_info"
                    android:textSize="15sp"
                    android:textColor="@color/text_secondary_gray"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/tv_guide_label"
                    app:layout_constraintStart_toStartOf="@id/tv_guide_label"/>

                <TextView
                    android:id="@+id/tv_remove_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/setting_resignation_info"
                    android:textColor="@color/text_secondary_gray"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_remove_info_label"
                    app:layout_constraintStart_toStartOf="@id/tv_remove_info_label"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_reason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardElevation="2dp"
            app:strokeColor="@color/complete_preview_bg_gray"
            app:strokeWidth="1dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/cv_guide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_resignation_reason"
                    android:textSize="16sp"
                    android:textColor="@color/text_secondary_gray"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_resignation_reason_sub"
                    android:textColor="@color/text_secondary_gray"
                    android:textSize="14sp"
                    android:layout_marginBottom="12dp"/>

                <RadioGroup
                    android:id="@+id/rg_reasons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_no_use"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_resignation_reason1"/>

                    <RadioButton
                        android:id="@+id/rb_other_app"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_resignation_reason2"/>

                    <RadioButton
                        android:id="@+id/rb_inconvenient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_resignation_reason3"/>

                    <RadioButton
                        android:id="@+id/rb_bug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_resignation_reason4"/>

                    <RadioButton
                        android:id="@+id/rb_new_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_resignation_reason5"/>

                    <RadioButton
                        android:id="@+id/rb_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_resignation_reason6"/>
                </RadioGroup>

                <EditText
                    android:id="@+id/et_other"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/setting_resignation_etc"
                    android:textSize="14sp"
                    android:gravity="top|start"
                    android:background="@android:drawable/edit_text"
                    android:padding="8dp"
                    android:inputType="textMultiLine"
                    android:maxLength="500"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0 / 500"
                    android:textSize="12sp"
                    android:gravity="end"
                    android:textColor="@color/text_secondary_gray"
                    android:visibility="gone"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_resignation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_primary"
            android:text="@string/setting_resignation_title"
            android:textColor="@color/white"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/cv_reason"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
